--- a/composer.json
+++ b/composer.json
@@ -18,23 +18,23 @@
 	],
 	"require": {
 		"php": ">=5.6.0",
+		"chillerlan/database": "dev-master",
+		"chillerlan/php-curl": "dev-master",
 		"vlucas/phpdotenv": "2.2.*"
 	},
 	"require-dev": {
-		"chillerlan/framework": "dev-master",
 		"phpunit/phpunit": "5.2.*"
 	},
 	"suggest": {
 		"chillerlan/bbcode": "*"
 	},
 	"autoload": {
+		"files": [
+			"src/Helpers/functions.php"
+		],
 		"psr-4": {
+			"chillerlan\\GW2DBUpdater\\": "cli/",
 			"chillerlan\\GW2DB\\": "src/"
-		}
-	},
-	"autoload-dev": {
-		"psr-4": {
-			"chillerlan\\GW2DBTest\\": "tests/"
 		}
 	}
 }
