--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,7 @@
 	"license": "MIT",
 	"type": "library",
 	"keywords": [
-		"guild wars 2",
-        "API",
-        "mysql",
-		"database"
+		"guild wars 2", "API", "mysql", "database"
 	],
 	"authors": [
 		{
@@ -20,10 +17,11 @@
 		"php": ">=5.6.0",
 		"chillerlan/database": "dev-master",
 		"chillerlan/php-curl": "dev-master",
+		"gw2treasures/gw2tools": "dev-master",
 		"vlucas/phpdotenv": "2.2.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "5.2.*"
+		"phpunit/phpunit": "5.3.*"
 	},
 	"suggest": {
 		"chillerlan/bbcode": "*"
