--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "chillerlan/gw2-database",
-	"description": "A Guild Wars 2 Database built from the official API. PHP 5.6+, PHP 7",
+	"description": "A Guild Wars 2 Database built from the official API. PHP 7",
 	"homepage": "https://github.com/codemasher/gw2-database",
 	"license": "MIT",
 	"type": "library",
@@ -14,17 +14,16 @@
 		}
 	],
 	"require": {
-		"php": ">=5.6.0",
+		"php": ">=7.0.3",
 		"chillerlan/database": "dev-master",
 		"chillerlan/php-curl": "dev-master",
-		"gw2treasures/gw2tools": "dev-smiley",
-		"vlucas/phpdotenv": "2.2.*"
+		"vlucas/phpdotenv": "2.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "5.3.*"
+		"phpunit/phpunit": "5.5.*"
 	},
 	"suggest": {
-		"chillerlan/bbcode": "*"
+		"chillerlan/bbcode": "for use with GW2BBCode"
 	},
 	"autoload": {
 		"files": [
@@ -33,6 +32,11 @@
 		"psr-4": {
 			"chillerlan\\GW2DBCLI\\": "cli/",
 			"chillerlan\\GW2DB\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"chillerlan\\GW2DBExamples\\": "examples/"
 		}
 	}
 }
