--- a/config/.env_example
+++ b/config/.env_example
@@ -9,3 +9,15 @@ DB_MYSQLI_SSL_CAPATH=
 DB_MYSQLI_SSL_CERT=
 DB_MYSQLI_SSL_CIPHER=
 DB_MYSQLI_SSL_KEY=
+
+TABLE_GW2_DIFF=gw2_diff
+TABLE_GW2_ITEMS=items_gw2treasures
+TABLE_GW2_ITEMS_TEMP=gw2_items_temp
+TABLE_GW2_ATTRIBUTE_COMBO=gw2_attribute_combinations
+TABLE_GW2_ATTRIBUTES=gw2_attributes
+TABLE_GW2_RECIPES=gw2_recipes
+TABLE_GW2_SKINS=gw2_skins
+TABLE_GW2_COLORS=gw2_colors
+TABLE_GW2_MAP_FLOORS=gw2_map_floors
+TABLE_GW2_REGIONS=gw2_regions
+TABLE_GW2_MAPS=gw2_maps
