--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
 	],
 	"require": {
 		"php": ">=7.0.7",
-		"chillerlan/database": "dev-master",
-		"chillerlan/php-curl": "dev-master",
+		"chillerlan/database": "1.0.*",
+		"chillerlan/php-curl": "1.0.*",
 		"chillerlan/php-traits": "1.0.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "6.4.*"
+		"phpunit/phpunit": "6.5.*"
 	},
 	"autoload": {
 		"files": [
