--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,13 @@
 		"php": ">=7.0.7",
 		"chillerlan/database": "1.0.*",
 		"chillerlan/php-curl": "1.0.*",
-		"chillerlan/php-traits": "1.0.*"
+		"chillerlan/php-traits": "1.1.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "6.5.*"
+	},
+	"suggest": {
+		"chillerlan/php-oauth": ">=2.0.0 - includes a GW2 API wrapper"
 	},
 	"autoload": {
 		"files": [
