--- a/config/.env_travis
+++ b/config/.env_travis
@@ -1,8 +1,8 @@
-DB_HOST=
-DB_PORT=
+DB_HOST=localhost
+DB_PORT=3306
 DB_SOCKET=
-DB_DATABASE=
-DB_USERNAME=
+DB_DATABASE=dbtest
+DB_USERNAME=root
 DB_PASSWORD=
 
 TABLE_GW2_DIFF=gw2_diff
@@ -17,4 +17,4 @@ TABLE_GW2_MAP_FLOORS=gw2_map_floors
 TABLE_GW2_REGIONS=gw2_regions
 TABLE_GW2_MAPS=gw2_maps
 
-GW2_APIKEY=
+IS_CI=TRUE
