--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
-	"name": "chillerlan/gw2-database",
+	"name": "codemasher/gw2-database",
 	"description": "A Guild Wars 2 Database built from the official API. PHP 7",
 	"homepage": "https://github.com/codemasher/gw2-database",
 	"license": "MIT",
 	"type": "library",
+	"minimum-stability": "stable",
 	"keywords": [
 		"guild wars 2", "API", "mysql", "database"
 	],
@@ -14,16 +15,20 @@
 		}
 	],
 	"require": {
-		"php": ">=7.0.7",
-		"chillerlan/database": "1.0.*",
-		"chillerlan/php-curl": "1.0.*",
-		"chillerlan/php-traits": "1.1.*"
+		"php": "^7.2",
+		"ext-json":"*",
+		"ext-mbstring":"*",
+		"psr/log": "^1.0",
+		"psr/simple-cache": "^1.0",
+		"chillerlan/php-database": "^2.0",
+		"chillerlan/php-log": "^1.0",
+		"chillerlan/php-cache": "^1.0",
+		"chillerlan/php-curl": "^1.0",
+		"chillerlan/php-oauth-core": "^1.0",
+		"chillerlan/php-traits": "^1.1"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "6.5.*"
-	},
-	"suggest": {
-		"chillerlan/php-oauth": ">=2.0.0 - includes a GW2 API wrapper"
+		"phpunit/phpunit": "^7.2"
 	},
 	"autoload": {
 		"files": [
@@ -36,7 +41,8 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"chillerlan\\GW2DBExamples\\": "examples/"
+			"chillerlan\\GW2DBExamples\\": "examples/",
+			"chillerlan\\OAuthTest\\": "vendor/chillerlan/php-oauth-core/tests"
 		}
 	}
 }
